# core

./: .bazelrc  .gitignore  MODULE.bazel  readme.md
.github/: copilot-instructions.md
.github/context/: index.md
.github/context/design/: build-release-architecture.md  bzlmod-readiness-assessment.md  pod-iceoryx-vs-protobuf-benchmark.md  record-io-uring-migration.md
.github/context/roadmaps/: middleware-evolution.md
.github/context/skills/: bzlmod-build-release.md
.github/workflows/: c-cpp.yml  release-pycyber.yml
cyber/: BUILD  init.cc  init.h
cyber/common/: environment.h  global_data.cc  time_conversion.h  time_conversion_test.cc
cyber/conf/: cyber.pb.conf
cyber/croutine/: croutine.cc  croutine.h
cyber/examples/: BUILD  listener_fb.cc  talker_fb.cc
cyber/examples/common_component_example/: common.dag
cyber/examples/integration_test/: BUILD  examples_integration_test.cc  examples_stress_test.cc
cyber/examples/perf_test/: BUILD  benchmark_process_common.h  benchmark_pub.cc  benchmark_sub.cc  cyber_rt_benchmark_suite.cc
cyber/examples/proto/: BUILD  examples.fbs
cyber/examples/record_play/: BUILD  record_play.cc  record_play.h  record_play_channels_dump.cc  record_play_test.cc  record_play_tool.cc  record_play_tool.h  record_play_tool_test.cc
cyber/message/: BUILD  flatbuffers_message.h  flatbuffers_message_test.cc  flatbuffers_message_traits.h  message_traits.h  message_traits_test.cc  protobuf_traits.h
cyber/node/: reader.h  reader_base.h  writer.h
cyber/proto/: transport_conf.proto
cyber/python/cyber_py3/: BUILD  _internal.py  cyber.py  cyber_time.py  cyber_timer.py  parameter.py  record.py
cyber/python/cyber_py3/examples/: BUILD  examples_smoke_test.py  parameter.py  timer.py
cyber/python/cyber_py3/test/: BUILD  cyber_test.py  record_test.py  shutdown_exit_test.py
cyber/python/internal/: BUILD  binding_common.cc  binding_common.h  binding_registrars.h  callback_lifecycle.cc  callback_lifecycle.h  module_state.cc  module_state.h  node_bindings.cc  node_bindings.h  parameter_bindings.cc  py_cyber_test.cc  pybind_module.cc  record_bindings.cc  runtime_bindings.cc  time_bindings.cc  timer_bindings.cc  topology_bindings.cc
cyber/record/: BUILD  record_reader_test.cc  record_writer.h
cyber/record/file/: record_file_reader.cc  record_file_reader.h  record_file_test.cc  record_file_writer.cc  record_file_writer.h  record_io_perf.cc  record_perf_reader.cc
cyber/scheduler/: scheduler.cc
cyber/service_discovery/: BUILD  topology_manager.cc  topology_manager.h
cyber/service_discovery/specific_manager/: channel_manager.cc  manager.cc
cyber/timer/: timer.cc  timer.h  timer_task.h  timer_test.cc  timing_wheel.cc
cyber/tools/cyber_recorder/: BUILD  info.cc  recorder.cc  recorder.h  recorder_test.cc
cyber/tools/cyber_recorder/player/: play_task.cc  play_task.h  play_task_producer.cc  play_task_producer.h
cyber/transport/: BUILD  iceoryx_chunk.h  iceoryx_runtime.h  transport.cc  transport.h  transport_test.cc
cyber/transport/dispatcher/: BUILD  rtps_dispatcher.cc  rtps_dispatcher.h  shm_dispatcher.cc  shm_dispatcher.h  shm_dispatcher_test.cc
cyber/transport/integration_test/: BUILD  hybrid_transceiver_test.cc  rtps_transceiver_test.cc  shm_transceiver_test.cc
cyber/transport/message/: BUILD  pod_message.h  pod_message_test.cc
cyber/transport/receiver/: BUILD  hybrid_receiver.h  iceoryx_event_bridge.h  iceoryx_receiver.h
cyber/transport/rtps/: BUILD  attributes_filler.cc  participant.cc  participant.h
cyber/transport/shm/: BUILD  profile.h  profile_test.cc  segment.cc  segment.h  state.h
cyber/transport/transmitter/: BUILD  hybrid_transmitter.h  iceoryx_transmitter.h  rtps_transmitter.h  shm_transmitter.h  transmitter.h
docker/: dev.x86_64.dockerfile  docker-compose.yml  enter_container.sh  entrypoint.sh  reset_container.sh
packaging/pycyber/: README.md  pyproject.toml  setup.py  verify_pycyber_examples.py
scripts/: build.sh  record_perf_reader.sh
scripts/deploy/: serve_bazel_registry.sh
scripts/env/: build.bash
scripts/format/: buildify.sh
scripts/lint/: lint.sh
scripts/release/: build_and_package_pycyber.sh  build_pycyber.py  build_release_artifacts.sh  check_bzlmod_lockfile.sh  generate_pycyber_api_docs.py  install_and_generate_docs.sh  ubuntu2204_baseline.sh  validate_pycyber.py
tests/integration_test/: examples_integration_test.cc  examples_stress_test.cc  examples_test_utils.h
tests/perf_test/: benchmark_process_common.h  benchmark_pub.cc  benchmark_sub.cc  cyber_rt_benchmark_suite.cc
tools/smart_recorder/proto/: BUILD
