module(
    name = "core",
    version = "1.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_pkg", version = "0.10.1")
bazel_dep(name = "rules_proto", version = "6.0.2")
bazel_dep(name = "rules_python", version = "0.34.0")
bazel_dep(name = "abseil-cpp", version = "20240116.2", repo_name = "com_google_absl")
bazel_dep(name = "gflags", version = "2.2.2", repo_name = "com_github_gflags_gflags")
bazel_dep(name = "glog", version = "0.7.1", repo_name = "com_github_google_glog")
bazel_dep(name = "googletest", version = "1.14.0.bcr.1", repo_name = "com_google_googletest")
bazel_dep(name = "grpc", version = "1.63.1", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "protobuf", version = "27.1", repo_name = "com_google_protobuf")
bazel_dep(name = "flatbuffers", version = "24.3.25")
bazel_dep(name = "zlib", version = "1.3.1.bcr.1")
bazel_dep(name = "ncurses", version = "6.4.20221231")
bazel_dep(name = "libuuid", version = "2.39.3.bcr.1")
bazel_dep(name = "fastcdr", version = "2.2.7")
bazel_dep(name = "fastdds", version = "2.14.6")

archive_override(
    integrity = "sha256-SYojdv7bjhCrP/8LeJdEyPjDVNKDZFbSj0bjMGxe5AQ=",
    module_name = "fastcdr",
    patch_strip = 0,
    patches = [
        "third_party/bazel/patches/fastcdr-2.2.7-module_dot_bazel.patch",
        "third_party/bazel/patches/fastcdr-2.2.7-add_build_file.patch",
        "third_party/bazel/patches/fastcdr-2.2.7-string_serialize.patch",
    ],
    strip_prefix = "Fast-CDR-2.2.7",
    urls = ["https://github.com/eProsima/Fast-CDR/archive/refs/tags/v2.2.7.tar.gz"],
)

archive_override(
    integrity = "sha256-Tt7Ddn1KKHqFU7G7sKc0Yri7YdmN1g/FbyYb5gEpBDg=",
    module_name = "fastdds",
    patch_strip = 0,
    patches = [
        "third_party/bazel/patches/fastdds-2.14.6-module_dot_bazel.patch",
        "third_party/bazel/patches/fastdds-2.14.6-add_build_file.patch",
    ],
    strip_prefix = "Fast-DDS-2.14.6",
    urls = ["https://github.com/eProsima/Fast-DDS/archive/refs/tags/v2.14.6.tar.gz"],
)
